# garrys-mod-rtx-remixed-perf

./: .gitignore  .gitmodules  Makefile  README.md  premake5.lua  symlink_maker.bat
RTXLauncher/: ContentMountingSystem.cs  Form1.Designer.cs  Form1.cs  Form1.resx  LauncherProgram.cs  RTXLauncher.csproj  SettingsData.cs
RTXLauncher/Controls/: GameMountCheckbox.cs
RTXLauncher/Properties/: Resources.Designer.cs
RTXLauncher/Properties/DataSources/: SettingsData.datasource
addon/lua/autorun/: cl_rtx.lua  cl_rtx_force_render.lua  cl_rtx_material_fixer.lua  cl_rtx_meshed_world_renderer.lua  rtxfixes_init.lua  sv_rtx.lua
addon/lua/entities/: rtx_flashlight.lua  rtx_flashlight_ent.lua  rtx_lightupdater.lua  rtx_lightupdater_old.lua  rtx_lightupdatermanager.lua  rtx_lightupdatermanager_x64.lua  rtx_pseudoplayer.lua  rtx_pseudoweapon.lua
addon/materials/effects/: blood_mist.vtf  blood_puff.vtf  cartoon_smoke.vtf  fas_bullet.vtf  fas_clouds.vtf  fas_debris_additive.vmt  fas_dust_motes_big.vtf  fas_dust_motes_small.vtf  fas_electricity.vtf  fas_light_glare_nodepth.vmt  fas_mega_smoke.vtf  fas_muzzle_break_test_b.vtf  fas_muzzleflash_test.vtf  fas_muzzleflash_test_c.vmt  fas_red_tracers.vmt  fas_red_tracers.vtf  fas_snow.vtf  fas_snow_sheet.vmt  fas_snow_sheet.vtf  fas_tracer.vmt  fas_tracer.vtf  fas_water_splashes.vtf  fas_waterfall.vmt  (+17 more)
addon/particles/: vfire_base_gigantic.pcf  vfire_base_gigantic_lod.pcf  vfire_base_huge_lod.pcf  vfire_base_inferno.pcf  vfire_base_inferno_lod.pcf  vfire_base_medium_lod.pcf  vfire_base_small_lod.pcf  vfire_burst_plume.pcf  vfire_burst_trail.pcf  vfire_flames_big.pcf  vfire_flames_gigantic.pcf  vfire_flames_medium_lod.pcf  vfire_flames_small_lod.pcf  vfire_flames_tiny_lod.pcf
patcherlauncher/: PatcherLauncher.cpp
remix/: clean_rtxconf.py  dxvk.conf  merge_rtx_textures.py  rtx.conf  rtx.conf-clean  rtx_hashes.conf  rtx_params.conf
source/: HardwareSkinningHooks.cpp  HardwareSkinningHooks.h  TinyMathLib.cpp  TinyMathLib.h  culling_fixes.cpp  culling_fixes.h  e_utils.cpp  e_utils.h  globalconvars.cpp  globalconvars.h  memory_patcher.cpp  memory_patcher.h  model_draw_hook.cpp  model_draw_hook.h  modelload_fixes.cpp  modelload_fixes.h  module.cpp  prop_fixes.cpp
source/entity_manager/: entity_manager.cpp  entity_manager.hpp
source/gmod_hook/: Cargo.toml  build.rs
source/gmod_hook/src/: gmod_interface.cpp  gmod_interface.hpp  hax.cpp  hax.hpp  lib.rs  main.rs  process_utils.rs  rtx_handler.rs
source/gmod_hook/src/injector/: main.rs  windows.rs
source/remixapi/: config_lua_bindings.cpp  light_lua_bindings.cpp  material_lua_bindings.cpp  remixapi.cpp  remixapi.h  resource_lua_bindings.cpp  rtx_light_lua_bindings.cpp  rtx_light_manager.cpp  rtx_light_manager.h  rtx_option_defaults.h
source/rtx_lights/: rtx_light_manager.cpp
source/shader_fixes/: shader_hooks.cpp  shader_hooks.h
(+362 files in other folders)
