[package]
name = "gmod_hook"
version = "0.1.0"
edition = "2021"

[lib]
name = "gmod_hook"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "rtx_injector"
path = "src/main.rs"

[dependencies]
libloading = "0.8"
fn_abi = "3"
log = "0.4"
env_logger = "0.10"
paste = "1.0"

[target.'cfg(any(target_os = "windows", target_os = "linux"))'.dependencies]
gmod = "17"

[target.'cfg(target_os = "macos")'.dependencies]
# For macOS, don't include gmod since skidscan doesn't work

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_System",
    "Win32_System_LibraryLoader",
] }

[build-dependencies]
cc = "1" 