[package]
name = "gmod_hook"
version = "0.1.0"
edition = "2021"

[lib]
name = "gmod_hook"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "rtx_injector"
path = "src/main.rs"

[dependencies]
gmod = "17"
env_logger = "0.10"
log = "0.4"
libloading = "0.8"

[target.'cfg(any(target_os = "windows", target_os = "linux"))'.dependencies]
fn_abi = "3"
paste = "1.0"

[target.'cfg(target_os = "macos")'.dependencies]
# For macOS, don't include gmod since skidscan doesn't work

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Memory",
    "Win32_Security"
] }

[build-dependencies]
cc = "1" 